[gd_scene load_steps=19 format=3 uid="uid://dv48c1hfsupwh"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_ngqvp"]
[ext_resource type="Texture2D" uid="uid://cfjo1jnl5l27e" path="res://External Resources/tinyFantazyTileSet/tiny fantasy rpg_strategy.png" id="2_f25sg"]
[ext_resource type="Script" path="res://Scripts/TileMap.gd" id="3_ed4y8"]
[ext_resource type="Texture2D" uid="uid://y135gcc5ou0h" path="res://External Resources/Pictures/black.png" id="3_v7hv1"]
[ext_resource type="Script" path="res://Scripts/Camera2D.gd" id="4_jur47"]
[ext_resource type="Texture2D" uid="uid://elpw3ix44wg0" path="res://External Resources/Pictures/GUI_Texture_Bottom.png" id="5_00b4k"]
[ext_resource type="PackedScene" uid="uid://cltsq8d5dcqme" path="res://Scenes/upgrade_screen.tscn" id="5_m2mt4"]
[ext_resource type="FontFile" uid="uid://ct4ox56t42ck3" path="res://External Resources/Fonts/Teko/Teko-VariableFont_wght.ttf" id="5_mai7t"]
[ext_resource type="Texture2D" uid="uid://bn652nl1w7rue" path="res://Sprites/Icons/Resources/Gold_Icon.png" id="8_12uut"]
[ext_resource type="Texture2D" uid="uid://5tfakxg43a0y" path="res://Sprites/Icons/Resources/Stone_Icon.png" id="9_0m3tn"]
[ext_resource type="PackedScene" uid="uid://dls2umfb0fkhd" path="res://Scenes/programbot.tscn" id="10_bdgyb"]
[ext_resource type="Texture2D" uid="uid://d3wonm53p64sy" path="res://Sprites/Icons/Resources/Wood_Icon.png" id="10_xy4hm"]
[ext_resource type="Theme" uid="uid://cvdn2gv12w2k1" path="res://Themes/ThemeButtons.tres" id="13_5kas1"]
[ext_resource type="Texture2D" uid="uid://c0vox0k6hkcjt" path="res://External Resources/Pictures/GUI_Texture_SideBar.png" id="13_fsr6y"]
[ext_resource type="PackedScene" uid="uid://cpp01alcayl7g" path="res://Scenes/robotlist.tscn" id="14_3hwur"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4gbcf"]
texture = ExtResource("2_f25sg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/custom_data_0 = true
3:3/0 = 0
3:3/0/custom_data_0 = true
4:3/0 = 0
5:3/0 = 0
5:3/0/custom_data_1 = "stone"
6:3/0 = 0
6:3/0/custom_data_1 = "gold"
7:3/0 = 0
7:3/0/custom_data_1 = "wood"
0:4/0 = 0
0:4/0/custom_data_0 = true
1:4/0 = 0
1:4/0/custom_data_0 = true
2:4/0 = 0
2:4/0/custom_data_0 = true
3:4/0 = 0
3:4/0/custom_data_0 = true
4:4/0 = 0
4:4/0/custom_data_0 = true
5:4/0 = 0
5:4/0/custom_data_2 = true
6:4/0 = 0
6:4/0/custom_data_2 = true
7:4/0 = 0
7:4/0/custom_data_1 = "wood"
0:5/0 = 0
0:5/0/custom_data_0 = true
1:5/0 = 0
1:5/0/custom_data_0 = true
2:5/0 = 0
2:5/0/custom_data_0 = true
3:5/0 = 0
3:5/0/custom_data_0 = true
4:5/0 = 0
4:5/0/custom_data_0 = true
5:5/0 = 0
5:5/0/custom_data_2 = true
6:5/0 = 0
6:5/0/custom_data_2 = true
7:5/0 = 0
7:5/0/custom_data_1 = "wood"
0:6/0 = 0
1:6/0 = 0
1:6/0/custom_data_0 = true
2:6/0 = 0
2:6/0/custom_data_0 = true
3:6/0 = 0
3:6/0/custom_data_0 = true
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
2:7/0/custom_data_0 = true
3:7/0 = 0
3:7/0/custom_data_0 = true
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q5s10"]
texture = ExtResource("3_v7hv1")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_iwlt4"]
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "resource_type"
custom_data_layer_1/type = 4
custom_data_layer_2/name = "base"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "uncovered"
custom_data_layer_3/type = 1
sources/0 = SubResource("TileSetAtlasSource_4gbcf")
sources/1 = SubResource("TileSetAtlasSource_q5s10")

[node name="World" type="Node2D"]
script = ExtResource("1_ngqvp")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_iwlt4")
format = 2
layer_0/name = "Ground"
layer_1/name = "Assets"
layer_1/tile_data = PackedInt32Array(-1, 327680, 4, 65535, 327680, 5, -65536, 393216, 4, 0, 393216, 5)
layer_2/name = "Blacked"
layer_2/tile_data = PackedInt32Array()
script = ExtResource("3_ed4y8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-569, -534)
anchor_mode = 0
script = ExtResource("4_jur47")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
layer = 2

[node name="UpgradeScreen" parent="Camera2D/CanvasLayer" instance=ExtResource("5_m2mt4")]
visible = false
anchor_top = 0.04
anchor_bottom = 0.874
offset_top = -0.200001
offset_right = 3.0
offset_bottom = 0.079895

[node name="Programbot" parent="Camera2D/CanvasLayer" instance=ExtResource("10_bdgyb")]
visible = false
offset_left = 1.0
offset_top = 3.0
offset_right = 1.0
offset_bottom = 3.0

[node name="GUI" type="CanvasLayer" parent="Camera2D"]

[node name="BottomGUI" type="NinePatchRect" parent="Camera2D/GUI"]
anchors_preset = -1
anchor_left = 0.133
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.639999
offset_top = -137.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_00b4k")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/GUI/BottomGUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.18
anchor_right = 0.994
anchor_bottom = 0.813
offset_left = -0.660002
offset_top = -0.0200005
offset_right = -0.00402832
offset_bottom = -0.00700378
theme_override_constants/separation = 20
alignment = 1

[node name="Temp_Button" type="Button" parent="Camera2D/GUI/BottomGUI/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_mai7t")
theme_override_font_sizes/font_size = 25
text = "Spawn Robot"

[node name="Program_Robots" type="Button" parent="Camera2D/GUI/BottomGUI/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_mai7t")
theme_override_font_sizes/font_size = 25
text = "Program Robots"

[node name="UpgradeScreen" type="Button" parent="Camera2D/GUI/BottomGUI/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_mai7t")
theme_override_font_sizes/font_size = 25
text = "   Upgrade   "

[node name="Left_Hbox" type="HBoxContainer" parent="Camera2D/GUI/BottomGUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.18
anchor_right = 0.086
anchor_bottom = 0.813
offset_left = 10.34
offset_top = -0.0200005
offset_right = 0.723999
offset_bottom = -0.00700378

[node name="CenterCamera_btn" type="Button" parent="Camera2D/GUI/BottomGUI/Left_Hbox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_mai7t")
theme_override_font_sizes/font_size = 25
text = "Center Camera"

[node name="SideGUI" type="NinePatchRect" parent="Camera2D/GUI"]
anchors_preset = -1
anchor_right = 1.001
offset_left = -3.0
offset_top = -4.0
offset_right = 0.8479
offset_bottom = 49.0
texture = ExtResource("5_00b4k")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/GUI/SideGUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_right = 0.367
anchor_bottom = 0.918
offset_left = 25.5589
offset_top = 9.0
offset_right = -7.75684
offset_bottom = -4.654
theme_override_constants/separation = 70

[node name="WoodIcon" type="TextureRect" parent="Camera2D/GUI/SideGUI/HBoxContainer"]
layout_mode = 2
tooltip_text = "Wood"
texture = ExtResource("10_xy4hm")
expand_mode = 2

[node name="Wood_Label" type="Label" parent="Camera2D/GUI/SideGUI/HBoxContainer/WoodIcon"]
layout_mode = 2
offset_left = 44.0
offset_top = 5.0
offset_right = 72.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_mai7t")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="StoneIcon" type="TextureRect" parent="Camera2D/GUI/SideGUI/HBoxContainer"]
layout_mode = 2
tooltip_text = "Stone"
texture = ExtResource("9_0m3tn")
expand_mode = 2

[node name="Stone_Label" type="Label" parent="Camera2D/GUI/SideGUI/HBoxContainer/StoneIcon"]
layout_mode = 2
offset_left = 41.0
offset_top = 5.0
offset_right = 96.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_mai7t")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="GoldIcon" type="TextureRect" parent="Camera2D/GUI/SideGUI/HBoxContainer"]
layout_mode = 2
tooltip_text = "Gold"
texture = ExtResource("8_12uut")
expand_mode = 2

[node name="Gold_Label" type="Label" parent="Camera2D/GUI/SideGUI/HBoxContainer/GoldIcon"]
layout_mode = 2
offset_left = 44.0
offset_top = 5.0
offset_right = 98.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_mai7t")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="HBoxPosLabels" type="HBoxContainer" parent="Camera2D/GUI/SideGUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.828
anchor_top = 0.075
anchor_right = 0.986
anchor_bottom = 0.981
offset_left = 0.463989
offset_top = 0.0249999
offset_right = 0.192749
offset_bottom = 0.00699615
alignment = 1

[node name="PrePosLabel" type="Label" parent="Camera2D/GUI/SideGUI/HBoxPosLabels"]
layout_mode = 2
theme = ExtResource("13_5kas1")
text = "Pos: "

[node name="Coordtext" type="Label" parent="Camera2D/GUI/SideGUI/HBoxPosLabels"]
layout_mode = 2
theme = ExtResource("13_5kas1")
text = "X:0 Y:-1"

[node name="ListGUI" type="NinePatchRect" parent="Camera2D/GUI"]
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.133
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -440.0
offset_right = 4.64
offset_bottom = 2.0
grow_vertical = 2
texture = ExtResource("13_fsr6y")

[node name="Panel" type="Panel" parent="Camera2D/GUI/ListGUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.049
anchor_top = 0.036
anchor_right = 0.955
anchor_bottom = 0.973
offset_left = 0.0149994
offset_top = 0.0879993
offset_right = -0.0750122
offset_bottom = -0.0660095

[node name="RobotlistControlNode" parent="Camera2D/GUI/ListGUI/Panel" instance=ExtResource("14_3hwur")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.019
anchor_right = 0.967
anchor_bottom = 0.986
offset_left = 0.0799999
offset_top = 0.133999
offset_right = -0.0800171
offset_bottom = -0.204041
grow_horizontal = 1
grow_vertical = 1

[node name="SelectedBotMenu" type="MenuButton" parent="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.107
anchor_top = -0.02
anchor_right = 1.107
anchor_bottom = -0.02
offset_left = 0.0320282
offset_right = 424.032
offset_bottom = 288.0

[node name="Panel" type="Panel" parent="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu"]
layout_mode = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 432.0
offset_bottom = 288.0

[node name="rtn_to_base_btn" type="Button" parent="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 224.0
offset_right = 168.0
offset_bottom = 278.0
text = "Return Bot To Base
"

[node name="status_btn" type="Button" parent="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu"]
layout_mode = 0
offset_left = 32.0
offset_top = 144.0
offset_right = 144.0
offset_bottom = 198.0
text = "Status
"

[node name="edit_name_btn" type="Button" parent="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 118.0
text = "Edit Name
"

[node name="hide_btn" type="Button" parent="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu"]
layout_mode = 0
offset_left = 304.0
offset_right = 424.0
offset_bottom = 54.0
text = "Hide Window
"

[node name="LineEdit" type="LineEdit" parent="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu"]
layout_mode = 0
offset_left = 16.0
offset_right = 160.0
offset_bottom = 50.0
focus_mode = 1
theme_override_font_sizes/font_size = 17
placeholder_text = "temp text"
max_length = 10
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="consolePanel" type="Panel" parent="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu"]
layout_mode = 0
offset_left = 184.0
offset_top = 64.0
offset_right = 416.0
offset_bottom = 280.0

[node name="Console" type="RichTextLabel" parent="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu/consolePanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 224.0
offset_bottom = 208.0
theme_override_font_sizes/normal_font_size = 17
bbcode_enabled = true
text = "temp text"

[connection signal="pressed" from="Camera2D/GUI/BottomGUI/HBoxContainer/Temp_Button" to="." method="_on_temp_button_pressed"]
[connection signal="pressed" from="Camera2D/GUI/BottomGUI/HBoxContainer/Program_Robots" to="Camera2D/CanvasLayer/Programbot" method="_on_program_robots_pressed"]
[connection signal="pressed" from="Camera2D/GUI/BottomGUI/HBoxContainer/UpgradeScreen" to="Camera2D/CanvasLayer/UpgradeScreen" method="_on_upgrade_screen_pressed"]
[connection signal="pressed" from="Camera2D/GUI/BottomGUI/Left_Hbox/CenterCamera_btn" to="." method="_on_center_camera_btn_pressed"]
[connection signal="_on_select" from="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode" to="." method="_on_robotlist_control_node__on_select"]
[connection signal="pressed" from="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu/rtn_to_base_btn" to="." method="_on_rtn_to_base_btn_pressed"]
[connection signal="pressed" from="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu/status_btn" to="." method="_on_status_btn_pressed"]
[connection signal="pressed" from="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu/edit_name_btn" to="." method="_on_edit_name_btn_pressed"]
[connection signal="pressed" from="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu/hide_btn" to="." method="_on_hide_btn_pressed"]
[connection signal="focus_exited" from="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_changed" from="Camera2D/GUI/ListGUI/Panel/RobotlistControlNode/SelectedBotMenu/LineEdit" to="." method="_on_line_edit_text_changed"]
